[package]
name = "random-pairings"
description = "Generates random pairings"
version = "0.1.0"
authors = ["Herohtar <belac1186@gmail.com>"]
repository = "https://github.com/Herohtar/random-pairings"
keywords = ["random", "pairs"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
js = ["getrandom/js"]

[dependencies]
rand = "^0.8.5"
getrandom = "^0.2.7"
