[package]
name = "random-pairings"
description = "Generates random pairings"
version = "0.1.2"
authors = ["Herohtar <belac1186@gmail.com>"]
repository = "https://github.com/Herohtar/random-pairings"
keywords = ["random", "pairs"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# js = ["getrandom/js"]

[dependencies]
rand = { version = "0.9.1", default-features = false }
# getrandom = "^0.2.10"
